In this release customer now can view the service status in his/her dashboard